force-app/main/default/objects/Bus_WO_Knowledge__c/Bus_WO_Knowledge__c.object-meta.xml
<CustomObject>
    <description>Junction Object between Service Request and Knowledge Object</description>
    <label>Service Request Knowledge</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Service Request Knowledge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Request Knowledges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>