force-app/main/default/objects/Bus_WO_Knowledge__c/fields/Bus_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Bus_Work_Order__c</fullName>
    <label>Service Request</label>
    <referenceTo>Bus_Work_Order__c</referenceTo>
    <relationshipLabel>Service Request Knowledges</relationshipLabel>
    <relationshipName>Bus_WO_Knowledges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>