force-app/main/default/objects/Bus_WO_Knowledge__c/fields/Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Knowledge__c</fullName>
    <label>Knowledge</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipName>Bus_WO_Knowledges</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>