force-app/main/default/objects/Bus_WO_Knowledge__c/fields/Knowledge_Article_Name1__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Name1__c</fullName>
    <label>Knowledge Article Name1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>