force-app/main/default/objects/Bus_WO_Knowledge__c/fields/Knowledge_Article_Name__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Name__c</fullName>
    <formula>Knowledge__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Knowledge Article Name</label>
    <type>Text</type>
</CustomField>